test/units/TypingSpec/valid/prog/let-data-wildcard.algst
and : Bool -> D0 -> ()
and a b =
  let _ = a in
  let _ = b in
  ()
