test/units/TypingSpec/invalid/types/let-pat-mismatched-con.algst
-- FIXME: Don't talk about a "case" in the error message.
let D0 = D0' in ()
